--- a/salt/user/tmux.conf
+++ b/salt/user/tmux.conf
@@ -7,6 +7,7 @@ setw -g mode-mouse on
 
 # Allow mouse to select which pane to use
 set -g mouse-select-pane on
+set -g mouse-resize-pane on
 
 # Scroll History
 set -g history-limit 30000
