Display short hostname in tmux rather than the long one

--- a/salt/user/tmux.conf
+++ b/salt/user/tmux.conf
@@ -1,4 +1,4 @@
-set -g status-left '#H'
+set -g status-left '#h'
 set-option -g prefix C-a
 set -g status-right '#[fg=black]#(uptime | egrep -o "[0-9]+ users?, +load.*"|perl -pe "s| averages?||"), %H:%M'
 
